@@ -27,8 +27,6 @@ package build.tools.charsetmapping;
 import java.io.*;
 import java.util.Arrays;
 import java.util.ArrayList;
-import java.util.Formatter;
-import java.util.regex.*;
 import java.nio.charset.*;
 
 public class GenerateDBCS {
@@ -60,8 +58,7 @@ public class GenerateDBCS {
             int    b1Max = toInteger(fields[7]);
             int    b2Min    = toInteger(fields[8]);
             int    b2Max    = toInteger(fields[9]);
-            System.out.printf("%s,%s,%s,%b,%s%n", 
-                    new Object[] { clzName, csName, hisName, Boolean.valueOf(isASCII), pkgName });
+            System.out.println(clzName + "," + csName + "," + hisName + "," + isASCII + "," + pkgName);
             genClass(args[0], args[1], "DoubleByte-X.java",
                     clzName, csName, hisName, pkgName,
                     isASCII, type,
@@ -71,7 +68,7 @@ public class GenerateDBCS {
 
     private static int toInteger(String s) {
         if (s.startsWith("0x") || s.startsWith("0X"))
-            return new Integer(s.substring(2), 16).intValue();
+            return Integer.valueOf(s.substring(2), 16).intValue();
         else
             return new Integer(s).intValue();
     }
@@ -140,9 +137,9 @@ public class GenerateDBCS {
         throws Exception
     {
 
-        StringBuffer b2cSB = new StringBuffer();
-        StringBuffer b2cNRSB = new StringBuffer();
-        StringBuffer c2bNRSB = new StringBuffer();
+        StringBuilder b2cSB = new StringBuilder();
+        StringBuilder b2cNRSB = new StringBuilder();
+        StringBuilder c2bNRSB = new StringBuilder();
 
         char[] db = new char[0x10000];
         char[] c2bIndex = new char[0x100];
